--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div>
-        <img src="D:\Desktop\temp\weilan\log.png">
+        <img src="log.png" alt="Logo">
     </div>
     <div class="container">
         <p class="expandable" data-target="1">专业的科研团队</p>
@@ -83,16 +83,16 @@
         </div>
         <p class="expandable" data-target="3">积极的学术氛围</p>
         <div id="3" class="hidden-content">
-            <img src="D:\Desktop\temp\weilan\image.png" alt="学术氛围图片">
+            <img src="image.png" alt="学术氛围图片">
         </div>
         <p class="expandable" data-target="4">独特的企业文化</p>
         <div id="4" class="hidden-content">
-            <img src="D:\Desktop\temp\weilan\jindu.jpg" alt="企业文化图片">
+            <img src="jindu.jpg" alt="企业文化图片">
         </div>
     </div>
     <div class="footer">
         <p>2025将至,过年祝福在这里！！！</p>
-        <a href="D:\Desktop\temp\weilan\tiaozhuan.png">点击获得新春祝福</a>
+        <a href="tiaozhuan.png">点击获得新春祝福</a>
     </div>
 
     <script>
